# rag-system-with-langchain-and-chromadb

./: .gitignore  README.md  chromadb.ipynb  main.py  pyproject.toml  requirements.txt
data/: doc_0.txt  doc_1.txt  doc_2.txt
